# Outset

./: .gitignore  CMakeLists.txt  README.md
planning/: organization.md
src/: main.cpp
src/constants/: CelestialBodies.h
src/math/: utilities.h
src/math/integrators/: rk4.cpp  rk4.h
src/math/rotation/: frames.h
src/simulation/physics/dynamics/: EquationsOfMotion.cpp  EquationsOfMotion.h
src/simulation/physics/gravity/: gravity.h
test/: CMakeLists.txt  first_test.cpp  test_helpers.h
test/math/: test_utilities.cpp
test/math/integrators/: test_rk4.cpp
test/math/integrators/rotation/: test_utilities.cpp
test/simulation/physics/dynamics/: test_dynamics.cpp
test/simulation/physics/gravity/: test_gravity.cpp
